test push, remove hello world, add header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Netflex</title>
 </head>
 <body>
-    <h1><strong style="color: white;">HELLO WORLD</strong></h1>
+
+    <header>
+
+    </header>
+
 </body>
 </html>
