Home profile index

--- a/index.html
+++ b/index.html
@@ -11,8 +11,45 @@
 <body>
 
     <header>
-        <b>Hello World</b>
+        <div class="logo">
+            <img src="./img/Vector.png" alt="Netflix-logo">
+        </div>
+
     </header>
 
+
+    <main>
+        <div class="index-container">
+            <h1>Chi Vuole Guardare NetFlix ?</h1>
+
+            <!-- profile div -->
+            <div class="profile-container">
+                <div class="profile">
+                    <img src="./img/ProfilePicture1.png" alt="Profile1">
+                    <h4>Zeus</h4>
+                </div>
+                <div class="profile">
+                    <img src="./img/ProfilePicture2.png" alt="Profile1">
+                    <h4>Ade</h4>
+                </div>
+                <div class="profile">
+                    <img src="./img/ProfilePicture3.png" alt="Profile1">
+                    <h4>Poseidone</h4>
+                </div>
+                <div class="profile">
+                    <img src="./img/ProfilePicture4.png" alt="Profile1">
+                    <h4>Apollo</h4>
+                </div>
+                <div class="profile">
+                    <img src="./img/addProfile.png" alt="Profile1">
+                    <h4>Add God</h4>
+                </div>
+            </div>
+            <div class="btn-profili">
+                <button class="btn-gestisci-profili">Gestisci Profili</button>
+            </div>
+            
+        </div>
+    </main>
 </body>
 </html>
