Mobile-Tabled query

--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
             <!-- profile div -->
             <div class="profile-container">
                 <div class="profile">
-                    <img src="./img/ProfilePicture1.png" alt="Profile1">
+                    <a href="#"><img src="./img/ProfilePicture1.png" alt="Profile1"></a>
                     <h4>Zeus</h4>
                 </div>
                 <div class="profile">
-                    <img src="./img/ProfilePicture2.png" alt="Profile1">
+                    <a href="#"><img src="./img/ProfilePicture2.png" alt="Profile2"></a>
                     <h4>Ade</h4>
                 </div>
                 <div class="profile">
-                    <img src="./img/ProfilePicture3.png" alt="Profile1">
+                    <a href="#"><img src="./img/ProfilePicture3.png" alt="Profile3"></a>
                     <h4>Poseidone</h4>
                 </div>
                 <div class="profile">
-                    <img src="./img/ProfilePicture4.png" alt="Profile1">
+                    <a href="#"><img src="./img/ProfilePicture4.png" alt="Profile4"></a>
                     <h4>Apollo</h4>
                 </div>
                 <div class="profile">
-                    <img src="./img/addProfile.png" alt="Profile1">
+                    <a href="#"><img src="./img/addProfile.png" alt="AddProfile"></a>
                     <h4>Add God</h4>
                 </div>
             </div>
