Update images, Fix Paths, Fix Font

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 
     <nav class="navdesktop d-flex">
         <div class="logo">
-            <img src="assets/img/navbar/NetflixLogoSvg.png" alt="Logoimg">
+            <img src="./assets/img/logo.png" alt="Logoimg">
         </div>
 
         <div>
@@ -34,16 +34,16 @@
         <div>
             <ul class="ul-2 d-flex">
                 <a href="#">
-                    <img src="assets/img/navbar/Lensimg.png" alt="imglens">                    
+                    <img src="./assets/img/navigation/Lensimg.png" alt="imglens">                    
                 </a>
                 <a href="#">
-                <img src="assets/img/navbar/campanella.png" alt="campanellaimg">                    
+                <img src="./assets/img/navigation/campanella.png" alt="campanellaimg">                    
                 </a>
                 <a href="#">
-                    <img src="assets/img/navbar/ProfileIMG.png" alt="Profileimg">                    
+                    <img src="./assets/img/profiles/ProfilePicture2.png" alt="Profileimg">                    
                 </a>
                 <a href="#" class="dropdown">
-                    <img src="assets/img/navbar/Downicon.png" alt="">                    
+                    <img src="./assets/img/navigation/Downicon.png" alt="">                    
                 </a>
 
             </ul>            
