--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="logo">
-            <img src="./img/Vector.png" alt="Netflix-logo">
+            <img src="./assets/img/logo.png" alt="Netflix-logo">
         </div>
 
     </header>
@@ -25,23 +25,23 @@
             <!-- profile div -->
             <div class="profile-container">
                 <div class="profile">
-                    <a href="#"><img src="./img/ProfilePicture1.png" alt="Profile1"></a>
+                    <a href="#"><img src="./assets/img/profiles/ProfilePicture1.png" alt="Profile1"></a>
                     <h4>Zeus</h4>
                 </div>
                 <div class="profile">
-                    <a href="#"><img src="./img/ProfilePicture2.png" alt="Profile2"></a>
+                    <a href="#"><img src="./assets/img/profiles/ProfilePicture2.png" alt="Profile2"></a>
                     <h4>Ade</h4>
                 </div>
                 <div class="profile">
-                    <a href="#"><img src="./img/ProfilePicture3.png" alt="Profile3"></a>
+                    <a href="#"><img src="./assets/img/profiles/ProfilePicture3.png" alt="Profile3"></a>
                     <h4>Poseidone</h4>
                 </div>
                 <div class="profile">
-                    <a href="#"><img src="./img/ProfilePicture4.png" alt="Profile4"></a>
+                    <a href="#"><img src="./assets/img/profiles/ProfilePicture4.png" alt="Profile4"></a>
                     <h4>Apollo</h4>
                 </div>
                 <div class="profile">
-                    <a href="#"><img src="./img/addProfile.png" alt="AddProfile"></a>
+                    <a href="#"><img src="./assets/img/profiles/addProfile.png" alt="AddProfile"></a>
                     <h4>Add God</h4>
                 </div>
             </div>
