Add for fun JS for different profiles linking, WIP, do not modify.

--- a/home.html
+++ b/home.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- MYCSS -->
+    <script type="text/javascript" src="./assets/js/currentUser.js"></script>
     <link rel="stylesheet" href="style.css">
 
-    <title>Document</title>
+    <title>Netflix</title>
 
 </head>
 
@@ -39,8 +38,8 @@
                 <a href="#">
                 <img src="./assets/img/navigation/campanella.png" alt="campanellaimg">                    
                 </a>
-                <a href="#">
-                    <img src="./assets/img/profiles/ProfilePicture2.png" alt="Profileimg">                    
+                <a id="profile-picture" href="#">
+                    <!-- <img src="./assets/img/profiles/ProfilePicture2.png" alt="Profileimg">                     -->
                 </a>
                 <a href="#" class="dropdown">
                     <img src="./assets/img/navigation/Downicon.png" alt="">                    
