Add per user url link to homepage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
     </header>
 
-
     <main>
         <div class="index-container">
             <h1>Chi Vuole Guardare NetFlix ?</h1>
@@ -25,19 +24,19 @@
             <!-- profile div -->
             <div class="profile-container">
                 <div class="profile">
-                    <a href="#"><img src="./assets/img/profiles/ProfilePicture1.png" alt="Profile1"></a>
+                    <a href="./home.html?user=zeus"><img src="./assets/img/profiles/ProfilePicture1.png" alt="Profile1"></a>
                     <h4>Zeus</h4>
                 </div>
                 <div class="profile">
-                    <a href="#"><img src="./assets/img/profiles/ProfilePicture2.png" alt="Profile2"></a>
+                    <a href="./home.html?user=ade"><img src="./assets/img/profiles/ProfilePicture2.png" alt="Profile2"></a>
                     <h4>Ade</h4>
                 </div>
                 <div class="profile">
-                    <a href="#"><img src="./assets/img/profiles/ProfilePicture3.png" alt="Profile3"></a>
+                    <a href="./home.html?user=poseidone"><img src="./assets/img/profiles/ProfilePicture3.png" alt="Profile3"></a>
                     <h4>Poseidone</h4>
                 </div>
                 <div class="profile">
-                    <a href="#"><img src="./assets/img/profiles/ProfilePicture4.png" alt="Profile4"></a>
+                    <a href="./home.html?user=apollo"><img src="./assets/img/profiles/ProfilePicture4.png" alt="Profile4"></a>
                     <h4>Apollo</h4>
                 </div>
                 <div class="profile">
