Add Netflix Popular Section Card Widgets

--- a/home.html
+++ b/home.html
@@ -47,9 +47,58 @@
 
             </ul>            
         </div>
-
-
     </nav>
+
+
+    <!-- Popular Section -->
+    <div class="movie-section">
+
+        <h3>Netflix Popular</h3>
+
+        <div class="poster-container">
+            <div class="movie-poster top-ten">
+                <img src="./assets/img/posters/MoviePoster_1.png" alt="New Amsterdam">
+            </div>
+            <div class="movie-poster top-ten">
+                <img src="./assets/img/posters/MoviePoster_2.png" alt="New Amsterdam">
+            </div>
+            <div class="movie-poster top-ten">
+                <img src="./assets/img/posters/MoviePoster_3.png" alt="New Amsterdam">
+            </div>
+            <div class="movie-poster top-ten">
+                <img src="./assets/img/posters/MoviePoster_4.png" alt="New Amsterdam">
+            </div>
+            <div class="movie-poster top-ten">
+                <img src="./assets/img/posters/MoviePoster_5.png" alt="New Amsterdam">
+            </div>
+        </div>
+    </div>
+
+        <!-- Popular Section -->
+        <div class="movie-section">
+
+            <h3>Netflix Popular</h3>
+    
+            <div class="poster-container">
+                <div class="movie-poster top-ten">
+                    <img src="./assets/img/posters/MoviePoster_1.png" alt="New Amsterdam">
+                </div>
+                <div class="movie-poster top-ten">
+                    <img src="./assets/img/posters/MoviePoster_2.png" alt="New Amsterdam">
+                </div>
+                <div class="movie-poster top-ten">
+                    <img src="./assets/img/posters/MoviePoster_3.png" alt="New Amsterdam">
+                </div>
+                <div class="movie-poster top-ten">
+                    <img src="./assets/img/posters/MoviePoster_4.png" alt="New Amsterdam">
+                </div>
+                <div class="movie-poster top-ten">
+                    <img src="./assets/img/posters/MoviePoster_5.png" alt="New Amsterdam">
+                </div>
+            </div>
+        </div>
+
+
 
 </body>
 
