add two more sections

--- a/home.html
+++ b/home.html
@@ -74,26 +74,50 @@
         </div>
     </div>
 
-        <!-- Popular Section -->
+        <!-- NnCapiSoIlTurko Section -->
         <div class="movie-section">
 
-            <h3>Netflix Popular</h3>
+            <h3>Qureshi Kebab</h3>
     
             <div class="poster-container">
                 <div class="movie-poster top-ten">
-                    <img src="./assets/img/posters/MoviePoster_1.png" alt="New Amsterdam">
+                    <img src="./assets/img/posters/MoviePoster_6.png" alt="New Amsterdam">
                 </div>
                 <div class="movie-poster top-ten">
-                    <img src="./assets/img/posters/MoviePoster_2.png" alt="New Amsterdam">
+                    <img src="./assets/img/posters/MoviePoster_7.png" alt="New Amsterdam">
                 </div>
                 <div class="movie-poster top-ten">
-                    <img src="./assets/img/posters/MoviePoster_3.png" alt="New Amsterdam">
+                    <img src="./assets/img/posters/MoviePoster_8.png" alt="New Amsterdam">
                 </div>
                 <div class="movie-poster top-ten">
-                    <img src="./assets/img/posters/MoviePoster_4.png" alt="New Amsterdam">
+                    <img src="./assets/img/posters/MoviePoster_9.png" alt="New Amsterdam">
                 </div>
                 <div class="movie-poster top-ten">
-                    <img src="./assets/img/posters/MoviePoster_5.png" alt="New Amsterdam">
+                    <img src="./assets/img/posters/MoviePoster_10.png" alt="New Amsterdam">
+                </div>
+            </div>
+        </div>
+
+        <!-- NnCapiSoIlTurko Section -->
+        <div class="movie-section">
+
+            <h3>Film Brutti</h3>
+    
+            <div class="poster-container">
+                <div class="movie-poster top-ten">
+                    <img src="./assets/img/posters/MoviePoster_11.png" alt="New Amsterdam">
+                </div>
+                <div class="movie-poster top-ten">
+                    <img src="./assets/img/posters/MoviePoster_12.png" alt="New Amsterdam">
+                </div>
+                <div class="movie-poster top-ten">
+                    <img src="./assets/img/posters/MoviePoster_13.png" alt="New Amsterdam">
+                </div>
+                <div class="movie-poster top-ten">
+                    <img src="./assets/img/posters/MoviePoster_14.png" alt="New Amsterdam">
+                </div>
+                <div class="movie-poster top-ten">
+                    <img src="./assets/img/posters/MoviePoster_15.png" alt="New Amsterdam">
                 </div>
             </div>
         </div>
