--- a/home.html
+++ b/home.html
@@ -16,8 +16,9 @@
     <!-- NAVBAR -->
 
     <nav class="navdesktop d-flex">
+        
         <div class="logo">
-            <img src="./assets/img/logo.png" alt="Logoimg">
+            <img src="assets/img/logo.png" alt="Logoimg">
         </div>
 
         <div>
@@ -32,23 +33,64 @@
 
         <div>
             <ul class="ul-2 d-flex">
-                <a href="#">
-                    <img src="./assets/img/navigation/Lensimg.png" alt="imglens">                    
-                </a>
-                <a href="#">
-                <img src="./assets/img/navigation/campanella.png" alt="campanellaimg">                    
-                </a>
-                <a id="profile-picture" href="#">
-                    <!-- <img src="./assets/img/profiles/ProfilePicture2.png" alt="Profileimg"> -->
-                </a>
-                <a href="#" class="dropdown">
-                    <img src="./assets/img/navigation/Downicon.png" alt="">                    
-                </a>
+                <li>
+                    <a href="#"><img src="assets/img/navigation/Lensimg.png" alt="imglens"></a>
+                </li>
 
-            </ul>            
+                <li>                
+                    <a href="#"><img src="assets/img/navigation/campanella.png" alt="campanellaimg"></a>
+                </li>
+
+                <li>
+                    <a href="#"><img src="assets/img/profiles/ProfilePicture3.png" alt="Profileimg"></a>
+                </li>
+
+                <li class="licontainer">
+
+                    <a href="#"><img src="assets/img/navigation/Downicon.png" alt="" class="dropdownimg"></a>
+
+                    <ul class="dropdown">
+                        <li>
+                            <img src="assets/img/profiles/ProfilePicture1.png" alt="">
+                            <a href="#">Birba</a>
+                        </li>
+                        <li>
+                            <img src="assets/img/profiles/ProfilePicture2.png" alt="">
+                            <a href="#">Hitler</a>
+                        </li>
+                        <li>
+                            <img src="assets/img/profiles/ProfilePicture3.png" alt="">
+                            <a href="#">Irene</a>
+                        </li>
+                        <li>
+                            <img src="assets/img/profiles/ProfilePicture4.png" alt="">
+                            <a href="#">the nurse</a>
+                        </li>
+                        <li>
+                            <img src="" alt="">
+                            <a href="#">Gestisci i profili</a>
+                        </li>
+                        <hr>
+                        <li>
+                            <img src="" alt="">
+                            <a href="">Account</a>
+                        </li>
+                        <li>
+                            <img src="" alt="">
+                            <a href="">Centro assistenza</a>
+                        </li>
+                        <hr>
+                        <p>Esci Da Netflix</p>
+                    </ul>
+                </li>
+                
+
+            </ul>  
+
         </div>
-    </nav>
 
+
+    </nav>
 
     <!-- Popular Section -->
     <div class="movie-section">
