--- a/home.html
+++ b/home.html
@@ -7,6 +7,11 @@
     <script type="text/javascript" src="./assets/js/currentUser.js"></script>
     <link rel="stylesheet" href="style.css">
 
+    <!-- googlefonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+
     <title>Netflix</title>
 
 </head>
@@ -236,6 +241,34 @@
                         </div>
                     </div>
                 </div>
+
+        <!-- Top 10 Images -->
+        <h3 class="section-title">Top 10 delle serie TV in Italia oggi</h3>
+        <div class="movie-section">
+            <div class="poster-container top10container">
+                <div class="movie-poster top-ten top10flex">
+                    <span class="numberstop">1</span>
+                    <img src="assets/img/posters/MoviePoster_21.png" alt="movietopimg">
+                </div>
+                <div class="movie-poster top-ten top10flex">
+                    <span class="numberstop">2</span>
+                    <img src="assets/img/posters/MoviePoster_22.png" alt="movietopimg">
+                </div>
+                <div class="movie-poster top-ten top10flex">
+                    <span class="numberstop">3</span>
+                    <img src="assets/img/posters/MoviePoster_23.png" alt="movietopimg">
+                </div>
+                <div class="movie-poster top-ten top10flex">
+                    <span class="numberstop">4</span>
+                    <img src="assets/img/posters/MoviePoster_24.png" alt="movietopimg">
+                </div>
+                <div class="movie-poster top-ten top10flex">
+                    <span class="numberstop">5</span>
+                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+                </div>
+            </div>
+        </div>
+
 
         <!-- Anime Section -->
         <h3 class="section-title">Anime e ispirati ad anime</h3>
