--- a/home.html
+++ b/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,19 +60,19 @@
                     <ul class="dropdown">
                         <li>
                             <img src="assets/img/profiles/ProfilePicture1.png" alt="">
-                            <a href="#">Birba</a>
+                            <a href="#">Mauro</a>
                         </li>
                         <li>
                             <img src="assets/img/profiles/ProfilePicture2.png" alt="">
-                            <a href="#">Hitler</a>
+                            <a href="#">Davide</a>
                         </li>
                         <li>
                             <img src="assets/img/profiles/ProfilePicture3.png" alt="">
-                            <a href="#">Irene</a>
+                            <a href="#">Leon</a>
                         </li>
                         <li>
                             <img src="assets/img/profiles/ProfilePicture4.png" alt="">
-                            <a href="#">the nurse</a>
+                            <a href="#">Gabriele</a>
                         </li>
                         <li>
                             <img src="" alt="">
@@ -242,7 +244,7 @@
                     </div>
                 </div>
 
-        <!-- Top 10 Images -->
+        <!-- Top 10 Section -->
         <h3 class="section-title">Top 10 delle serie TV in Italia oggi</h3>
         <div class="movie-section">
             <div class="poster-container top10container">
@@ -264,6 +266,26 @@
                 </div>
                 <div class="movie-poster top-ten top10flex">
                     <span class="numberstop">5</span>
+                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+                </div>
+                <div class="movie-poster top-ten top10flex">
+                    <span class="numberstop">6</span>
+                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+                </div>
+                <div class="movie-poster top-ten top10flex">
+                    <span class="numberstop">7</span>
+                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+                </div>
+                <div class="movie-poster top-ten top10flex">
+                    <span class="numberstop">8</span>
+                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+                </div>
+                <div class="movie-poster top-ten top10flex">
+                    <span class="numberstop">9</span>
+                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+                </div>
+                <div class="movie-poster top-ten top10flex">
+                    <span class="numberstop">10</span>
                     <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
                 </div>
             </div>
