--- a/home.html
+++ b/home.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,22 +50,20 @@
     
                     <ul class="dropdown">
                         <li>
-
-                            <img src="assets/img/profiles/ProfilePicture1.png" alt="">
-                            <a href="#">Mauro</a>
+                            <img src="./assets/img/profiles/ProfilePicture1.png" alt="">
+                            <a href="#">Birba</a>
                         </li>
                         <li>
-                            <img src="assets/img/profiles/ProfilePicture2.png" alt="">
-                            <a href="#">Davide</a>
+                            <img src="./assets/img/profiles/ProfilePicture2.png" alt="">
+                            <a href="#">Hitler</a>
                         </li>
                         <li>
-                            <img src="assets/img/profiles/ProfilePicture3.png" alt="">
-                            <a href="#">Leon</a>
+                            <img src="./assets/img/profiles/ProfilePicture3.png" alt="">
+                            <a href="#">Irene</a>
                         </li>
                         <li>
-                            <img src="assets/img/profiles/ProfilePicture4.png" alt="">
-                            <a href="#">Gabriele</a>
-
+                            <img src="./assets/img/profiles/ProfilePicture4.png" alt="">
+                            <a href="#">the nurse</a>
                         </li>
                         <li>
                             <img src="" alt="">
@@ -252,55 +248,6 @@
                         </div>
                     </div>
                 </div>
-
-
-        <!-- Top 10 Section -->
-        <h3 class="section-title">Top 10 delle serie TV in Italia oggi</h3>
-        <div class="movie-section">
-            <div class="poster-container top10container">
-                <div class="movie-poster top-ten top10flex">
-                    <span class="numberstop">1</span>
-                    <img src="assets/img/posters/MoviePoster_21.png" alt="movietopimg">
-                </div>
-                <div class="movie-poster top-ten top10flex">
-                    <span class="numberstop">2</span>
-                    <img src="assets/img/posters/MoviePoster_22.png" alt="movietopimg">
-                </div>
-                <div class="movie-poster top-ten top10flex">
-                    <span class="numberstop">3</span>
-                    <img src="assets/img/posters/MoviePoster_23.png" alt="movietopimg">
-                </div>
-                <div class="movie-poster top-ten top10flex">
-                    <span class="numberstop">4</span>
-                    <img src="assets/img/posters/MoviePoster_24.png" alt="movietopimg">
-                </div>
-                <div class="movie-poster top-ten top10flex">
-                    <span class="numberstop">5</span>
-                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
-                </div>
-                <div class="movie-poster top-ten top10flex">
-                    <span class="numberstop">6</span>
-                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
-                </div>
-                <div class="movie-poster top-ten top10flex">
-                    <span class="numberstop">7</span>
-                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
-                </div>
-                <div class="movie-poster top-ten top10flex">
-                    <span class="numberstop">8</span>
-                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
-                </div>
-                <div class="movie-poster top-ten top10flex">
-                    <span class="numberstop">9</span>
-                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
-                </div>
-                <div class="movie-poster top-ten top10flex">
-                    <span class="numberstop">10</span>
-                    <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
-                </div>
-            </div>
-        </div>
-
 
         <!-- Anime Section -->
         <h3 class="section-title">Anime e ispirati ad anime</h3>
