--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
                 </li>
     
                 <li>
-                    <a href="#"><img src="./assets/img/profiles/ProfilePicture3.png" alt="Profileimg"></a>
+                    <a id="profile-picture" href="#"><img src="./assets/img/profiles/ProfilePicture3.png" alt="Profileimg"></a>
                 </li>
     
                 <li class="licontainer">
@@ -248,6 +248,54 @@
                         </div>
                     </div>
                 </div>
+
+
+       <!-- Top 10 Section -->
+       <h3 class="section-title">Top 10 delle serie TV in Italia oggi</h3>
+       <div class="movie-section">
+           <div class="poster-container top10container">
+               <div class="movie-poster top10flex">
+                   <span class="numberstop">1</span>
+                   <img src="assets/img/posters/MoviePoster_21.png" alt="movietopimg">
+               </div>
+               <div class="movie-poster top10flex">
+                   <span class="numberstop">2</span>
+                   <img src="assets/img/posters/MoviePoster_22.png" alt="movietopimg">
+               </div>
+               <div class="movie-poster top10flex">
+                   <span class="numberstop">3</span>
+                   <img src="assets/img/posters/MoviePoster_23.png" alt="movietopimg">
+               </div>
+               <div class="movie-poster top10flex">
+                   <span class="numberstop">4</span>
+                   <img src="assets/img/posters/MoviePoster_24.png" alt="movietopimg">
+               </div>
+               <div class="movie-poster top10flex">
+                   <span class="numberstop">5</span>
+                   <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+               </div>
+               <div class="movie-poster top10flex">
+                   <span class="numberstop">6</span>
+                   <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+               </div>
+               <div class="movie-poster top10flex">
+                   <span class="numberstop">7</span>
+                   <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+               </div>
+               <div class="movie-poster top10flex">
+                   <span class="numberstop">8</span>
+                   <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+               </div>
+               <div class="movie-poster top10flex">
+                   <span class="numberstop">9</span>
+                   <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+               </div>
+               <div class="movie-poster top10flex">
+                   <span class="numberstop">10</span>
+                   <img src="assets/img/posters/MoviePoster_25.png" alt="movietopimg">
+               </div>
+           </div>
+       </div>
 
         <!-- Anime Section -->
         <h3 class="section-title">Anime e ispirati ad anime</h3>
