fixed width + index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <div class="index-container">
-            <h1>Chi Vuole Guardare NetFlix ?</h1>
+            <h1>Chi Vuole Guardare Godflex ?</h1>
 
             <!-- profile div -->
             <div class="profile-container">
