Add icons and Update dropdown names

--- a/home.html
+++ b/home.html
@@ -51,31 +51,31 @@
                     <ul class="dropdown">
                         <li>
                             <img src="./assets/img/profiles/ProfilePicture1.png" alt="">
-                            <a href="#">Birba</a>
+                            <a href="#">Zeus</a>
                         </li>
                         <li>
                             <img src="./assets/img/profiles/ProfilePicture2.png" alt="">
-                            <a href="#">Hitler</a>
+                            <a href="#">Ade</a>
                         </li>
                         <li>
                             <img src="./assets/img/profiles/ProfilePicture3.png" alt="">
-                            <a href="#">Irene</a>
+                            <a href="#">Poseidone</a>
                         </li>
                         <li>
                             <img src="./assets/img/profiles/ProfilePicture4.png" alt="">
-                            <a href="#">the nurse</a>
+                            <a href="#">Apollo</a>
                         </li>
                         <li>
-                            <img src="" alt="">
+                            <img src="./assets/img/navigation/pen-icon.svg" alt="">
                             <a href="#">Gestisci i profili</a>
                         </li>
                         <hr>
                         <li>
-                            <img src="" alt="">
+                            <img src="./assets/img/navigation/account-icon.svg" alt="">
                             <a href="">Account</a>
                         </li>
                         <li>
-                            <img src="" alt="">
+                            <img src="./assets/img/navigation/assistance.svg" alt="">
                             <a href="">Centro assistenza</a>
                         </li>
                         <hr>
