--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="./assets/js/currentUser.js"></script>
     <link rel="stylesheet" href="style.css">
 
-    <title>Netflix</title>
+    <title>Godflex</title>
 
 </head>
 
@@ -88,6 +88,7 @@
     </nav>
 
     <div class="movieposter">
+        
         <div class="movieinfo-pos">
             <div class="movieinfo">
                 <div class="item1">
@@ -106,8 +107,10 @@
             </div>
         </div>
     </div>
+
  
-    <!-- Popular Section -->
+<!-- Popular Section -->
+
 <div class="popular-container">
     <h3 class="section-title">Netflix Popular</h3>
     <div class="movie-section">
@@ -148,9 +151,10 @@
             </div>
         </div>
     </div>
-    </div>   
+    <div class="hero-vignette"></div>
+</div>   
+    
     </div>
-
 
     <div class="god-container">
         <!-- Titoli Del Momento Section -->
