mobile query navbar

--- a/home.html
+++ b/home.html
@@ -21,7 +21,10 @@
 
         <!-- Menu Items Section -->
         <div class="nav-container">
+            <div class="browse"><a href="#">Browse <span class="drop"><img src="./assets/img/navigation/Downicon.png" alt=""></span></a></div>           
+
             <ul class="nav-links">
+                <div class="browse"><li><a href="#">Browse <span class="drop"><img src="./assets/img/navigation/Downicon.png" alt=""></span></a></li></div>
                 <li><a href="#"><strong>Home</strong></a></li>
                 <li><a href="#">Serie Tv</a></li>
                 <li><a href="#">Film</a></li>
@@ -107,7 +110,7 @@
             </div>
         </div>
     </div>
-
+    
  
 <!-- Popular Section -->
 
