Movie Player WIP

--- a/assets/html/moviecard.html
+++ b/assets/html/moviecard.html
@@ -1,10 +1,16 @@
 
 <link rel="stylesheet" href="/style.css">
 
-<style>body {padding-left: 50px; padding-top: 50px;}</style>
+<style>body {background: gray; padding-left: 50px; padding-top: 50px;}</style>
 
 <div class="media-player" style="display: block">
 
     <img class="player-image" src="/assets/img/posters/MoviePoster_1.png">
+    <div class="player-container">
+        <span class="card-play"></span>
+        <span class="card-add"></span>
+        <span class="card-like"></span>
+        <span class="card-more"></span>
+    </div>
 
 </div>
