Finish Movie Player Card

--- a/assets/html/moviecard.html
+++ b/assets/html/moviecard.html
@@ -12,5 +12,8 @@
         <span class="card-like"></span>
         <span class="card-more"></span>
     </div>
+    <div class="player-container">
+    <span class="compatible">98% compatible<span class="vm14"></span><span>8 Stagioni</span></span>
+</div>
 
 </div>
