--- a/home.html
+++ b/home.html
@@ -120,7 +120,18 @@
         <div class="poster-container">
             <div class="movie-poster">
                 <span class="top-ten"></span>
-                <div class="media-player"></div>
+                <div class="media-player">
+                    <img class="player-image" src="/assets/img/posters/MoviePoster_1.png">
+                    <div class="player-container">
+                        <span class="card-play"></span>
+                        <span class="card-add"></span>
+                        <span class="card-like"></span>
+                        <span class="card-more"></span>
+                    </div>
+                    <div class="player-container">
+                    <span class="compatible">98% compatible<span class="vm14"></span><span>8 Stagioni</span></span>
+                </div>
+            </div>
                 <img src="./assets/img/posters/MoviePoster_1.png" alt="New Amsterdam">
             </div>
             <div class="movie-poster">
