Remove top10container and fix film logo

--- a/home.html
+++ b/home.html
@@ -129,14 +129,25 @@
                         <span class="card-more"></span>
                     </div>
                     <div class="player-container">
-                    <span class="compatible">98% compatible<span class="vm14"></span><span>8 Stagioni</span></span>
+                    <span class="compatible">98% compatible<span class="vm14"></span><span>8 Seasons</span></span>
                 </div>
             </div>
                 <img src="./assets/img/posters/MoviePoster_1.png" alt="New Amsterdam">
             </div>
             <div class="movie-poster">
                 <span class="top-ten"></span>
-                <span class="media-player"></span>
+                <div class="media-player">
+                    <img class="player-image" src="/assets/img/posters/MoviePoster_2.png">
+                    <div class="player-container">
+                        <span class="card-play"></span>
+                        <span class="card-add"></span>
+                        <span class="card-like"></span>
+                        <span class="card-more"></span>
+                    </div>
+                    <div class="player-container">
+                    <span class="compatible">98% compatible<span class="vm14"></span><span>8 Seasons</span></span>
+                </div>
+            </div>
                 <img src="./assets/img/posters/MoviePoster_2.png" alt="New Amsterdam">
             </div>
             <div class="movie-poster">
@@ -271,7 +282,7 @@
        <!-- Top 10 Section -->
        <h3 class="section-title">Top 10 delle serie TV in Italia oggi</h3>
        <div class="movie-section">
-           <div class="poster-container top10container">
+           <div class="poster-container">
                <div class="movie-poster top10flex">
                    <span class="numberstop">1</span>
                    <img src="assets/img/posters/MoviePoster_21.png" alt="movietopimg">
