--- a/assets/html/moviecard.html
+++ b/assets/html/moviecard.html
@@ -13,7 +13,10 @@
         <span class="card-more"></span>
     </div>
     <div class="player-container">
-    <span class="compatible">98% compatible<span class="vm14"></span><span>8 Stagioni</span></span>
+    <span class="compatible">98% compatible<span class="vm14"></span><span>8 Seasons</span></span>
+</div>
+<div class="genere">
+    <span class="compatible"><span>Drama<span class="circle"></span>Horror<span class="circle"></span>Horror</span>
 </div>
 
 </div>
