--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 
             <ul class="nav-links">
                 <div class="browse"><li><a href="#">Browse <span class="drop"><img src="./assets/img/navigation/Downicon.png" alt=""></span></a></li></div>
-                <li><a href="#"><strong>Home</strong></a></li>
+                <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Serie Tv</a></li>
                 <li><a href="#">Film</a></li>
                 <li><a href="#">Nuovi e Popolari</a></li>
@@ -38,11 +38,12 @@
                 <li>
                     <a href="#"><img src="./assets/img/navigation/Lensimg.png" alt="imglens"></a>
                 </li>
-    
+                <li>
+                    <a id="god-name" href="#">Zeus</a>
+                </li>
                 <li>                
                     <a href="#"><img src="./assets/img/navigation/campanella.png" alt="campanellaimg"></a>
                 </li>
-    
                 <li>
                     <a id="profile-picture" href="#"><img src="./assets/img/profiles/ProfilePicture3.png" alt="Profileimg"></a>
                 </li>
@@ -130,6 +131,9 @@
                     </div>
                     <div class="player-container">
                     <span class="compatible">98% compatible<span class="vm14"></span><span>8 Seasons</span></span>
+                </div>
+                <div class="genere">
+                    <span class="compatible"><span>Drama<span class="circle"></span>Horror<span class="circle"></span>Horror</span>
                 </div>
             </div>
                 <img src="./assets/img/posters/MoviePoster_1.png" alt="New Amsterdam">
