Add God Function

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="./assets/js/currentUser.js"></script>
+    <link rel="shortcut icon" href="./assets/img/profiles/ProfilePicture1.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
     <title>Godflex</title>
@@ -16,7 +17,7 @@
     <nav class="navdesktop">
         
         <div class="logo">
-            <img src="./assets/img/logo.png" alt="Logoimg">
+            <a href="index.html"><img src="./assets/img/logo.png" alt="Logoimg"></a>
         </div>
 
         <!-- Menu Items Section -->
@@ -122,7 +123,7 @@
             <div class="movie-poster">
                 <span class="top-ten"></span>
                 <div class="media-player">
-                    <img class="player-image" src="/assets/img/posters/MoviePoster_1.png">
+                    <img class="player-image" src="./assets/img/posters/MoviePoster_1.png">
                     <div class="player-container">
                         <span class="card-play"></span>
                         <span class="card-add"></span>
@@ -141,7 +142,7 @@
             <div class="movie-poster">
                 <span class="top-ten"></span>
                 <div class="media-player">
-                    <img class="player-image" src="/assets/img/posters/MoviePoster_2.png">
+                    <img class="player-image" src="./assets/img/posters/MoviePoster_2.png">
                     <div class="player-container">
                         <span class="card-play"></span>
                         <span class="card-add"></span>
