Some improvements and a bit of card responsiveness

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="btn-profili">
-                <button class="btn-gestisci-profili">Gestisci Profili</button>
+                <a href="#" class="btn-gestisci-profili">Gestisci Profili</a>
             </div>
             
         </div>
