--- a/home.html
+++ b/home.html
@@ -106,8 +106,8 @@
                 </div>
                 <div class="item4">
                     <div class="riproduci">
-                        <button class="btn-riproduci"><div class="play"><img src="./assets/img/posters/VectorPlay.svg" alt="Play"></div>Riproduci</button>
-                        <button class="btn-riproduci btn-info"><div class="info"><img src="./assets/img/posters/VectorInfo.png" alt="info"></div>Altre info</button>
+                        <a href="#" class="btn-riproduci"><div class="play"><img src="./assets/img/posters/VectorPlay.svg" alt="Play"></div>Riproduci</a>
+                        <a href="#" class="btn-riproduci btn-info"><div class="info"><img src="./assets/img/posters/VectorInfo.png" alt="info"></div>Altre info</a>
                     </div>  
             </div>
         </div>
