--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="./assets/js/currentUser.js"></script>
+    <script type="text/javascript" src="./assets/js/currentUser.js"></script> <!-- GOD JavaScript -->
     <link rel="shortcut icon" href="./assets/img/profiles/ProfilePicture1.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
@@ -14,6 +14,8 @@
 
 <body>
 
+
+    <!-- Navbar Section -->
     <nav class="navdesktop">
         
         <div class="logo">
