Add Rating VM14

--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
     </nav>
 
     <div class="movieposter">
-        
+        <span class="rating">VM14</span>
         <div class="movieinfo-pos">
             <div class="movieinfo">
                 <div class="item1">
