Change Navbar and add loop to video

--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
     </picture>   -->
 
     <!-- Video Player -->
-    <video id="background-video" autoplay muted poster="./assets/img/posters/MoviePoster.png">
+    <video id="background-video" autoplay muted loop poster="./assets/img/posters/MoviePoster.png">
     <source src="./assets/hero/stranger_things.mp4" type="video/mp4">
     </video>
 
