--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
                             <a href="">Centro assistenza</a>
                         </li>
                         <hr>
-                        <p>Esci Da Netflix</p>
+                        <p>Esci da Godflex</p>
                     </ul>
                 </li>
             </ul>  
@@ -1340,7 +1340,7 @@
       
           <!-- FOOTER -->
           <footer>
-            <p>&copy 1997-2021 Netflix, Inc. {i-062d573a0ee099242</p>
+            <p>&copy 1997-2022 Godflex, Inc. {062d573a0ee099242}</p>
           </footer>
         </div>
     </section>
