--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
                     <a href="#"><img src="./assets/img/navigation/campanella.png" alt="campanellaimg"></a>
                 </li>
                 <li>
-                    <a id="profile-picture" href="#"><img src="./assets/img/profiles/ProfilePicture3.png" alt="Profileimg"></a>
+                    <a id="profile-picture" href="/index.html"><img src="./assets/img/profiles/ProfilePicture3.png" alt="Profileimg"></a>
                 </li>
     
                 <li class="licontainer">
