--- a/home.html
+++ b/home.html
@@ -81,14 +81,16 @@
                         <hr>
                         <li>
                             <img src="./assets/img/navigation/account-icon.svg" alt="">
-                            <a href="">Account</a>
+                            <a href="#">Account</a>
                         </li>
                         <li>
                             <img src="./assets/img/navigation/assistance.svg" alt="">
-                            <a href="">Centro assistenza</a>
+                            <a href="#">Centro assistenza</a>
                         </li>
                         <hr>
-                        <p>Esci da Godflex</p>
+                        <li>
+                        <p><a href="/index.html">Esci da Godflex</a></p>
+                        </li>
                     </ul>
                 </li>
             </ul>  
