--- a/home.html
+++ b/home.html
@@ -1305,42 +1305,39 @@
 
         <!-- Social icons -->
         <div class="social-icons">
-            <img src="./assets/img/navigation/facebook.svg" alt="Img-social">
-            <img src="./assets/img/navigation/instagram.svg" alt="Img-social">
-            <img src="./assets/img/navigation/twitter.svg" alt="Img-social">
-            <img src="./assets/img/navigation/youtube.svg" alt="Img-social">
+            <a href="#"><img src="./assets/img/navigation/facebook.svg" alt="Img-social"></a>
+            <a href="#"><img src="./assets/img/navigation/instagram.svg" alt="Img-social"></a>
+            <a href="#"><img src="./assets/img/navigation/twitter.svg" alt="Img-social"></a>
+            <a href="#"><img src="./assets/img/navigation/youtube.svg" alt="Img-social"></a>
         </div>
 
         <!-- Various Links -->
         <div class="footer-links">
             <ul>
-                <li><a href=""> Audio e sottotitoli</a></li>
-                <li><a href="">Media Center</a></li>
-                <li><a href="">Privacy</a></li>
-                <li><a href="">Contattaci</a></li>
+                <li><a href="#"> Audio e sottotitoli</a></li>
+                <li><a href="#">Media Center</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Contattaci</a></li>
             </ul>
             <ul>
-                <li><a href="">Audiodescrizione</a></li>
-                <li><a href="">Rapporti con gli investitori</a></li>
-                <li><a href="">Note Legali</a></li>
+                <li><a href="#">Audiodescrizione</a></li>
+                <li><a href="#">Rapporti con gli investitori</a></li>
+                <li><a href="#">Note Legali</a></li>
             </ul>
             <ul>
-                <li><a href="">Centro assistenza</a></li>
-                <li><a href="">Oppurtunità di lavoro</a></li>
-                <li><a href="">Preferenze per i cookie</a></li>
+                <li><a href="#">Centro assistenza</a></li>
+                <li><a href="#">Oppurtunità di lavoro</a></li>
+                <li><a href="#">Preferenze per i cookie</a></li>
             </ul>
             <ul>
-                <li><a href="">Carte regalo</a></li>
-                <li><a href="">Condizioni di utilizzo</a></li>
-                <li><a href="">Informazioni sull'azienda</a></li>
+                <li><a href="#">Carte regalo</a></li>
+                <li><a href="#">Condizioni di utilizzo</a></li>
+                <li><a href="#">Informazioni sull'azienda</a></li>
             </ul>
         </div>
-
-        <button class="service-code">
-            Codice di servizio
-        </button>
-
-        <span class="copyright">&copy 1997-2022 Netflix. inc <br> MauroDavideLeoGabbry</span>
+            <button class="service-code">
+            Codice di servizio</button>        
+        <span class="copyright">&copy 1997-2022 Netflix. inc <br> TeamGodFlex</span>
 
     </footer>
 
